# iLQR-Humanoid

./: CMakeLists.txt  README.md  ilqr.cpp  ilqr.hpp  mpc.cpp  robot_model.cpp  robot_model.hpp  robot_utils.cpp  robot_utils.hpp  simulate.py
walk/: contact_schedule.csv  ee_pos_ref.csv  q_ref.csv  walk.py
